resource-manifests/istio/retries/sa-logic-retries-timeouts-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sa-logic
spec:
  hosts:
    - sa-logic
  gateways:
    - http-gateway
  http:
  - route: 
    - destination: 
        host: sa-logic
        subset: v1
      weight: 80
    - destination: 
        host: sa-logic
        subset: v2
      weight: 20
    timeout: 8s
    retries:
      attempts: 3
      perTryTimeout: 3s
